コード整理。